--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,69 @@
-h1 {
-    color: red;
+html{
+    font-family: 'Open Sans', sans-serif;
+  height:100%;
+    width:100%;
+
+    
+   
+}
+
+#box-container {
+   height: 100%;
+   width: 100%;
+    background-color: limegreen;
+    display: flex;
+    flex-direction: column;
+    
+
+    
+  
+
+}
+#header {
+
+    text-align: center;
+    background-color: lightskyblue;
+   
+}
+
+#footer {
+    
+   
+    text-align: center;
+    background-color: lightskyblue;
+    
+    
+}
+
+
+#search-container {
+    height: 100%;
+
+    background-color: pink;
+    justify-content: center;
+    display:flex;
+    flex-direction: column;
+
+}
+
+#logo {
+    align-self:center;
+}
+
+#search-bar {
+    margin: 10px;
+    border-radius: 30px;
+    border: 1px solid rgb(225, 225, 225);
+    
+    align-self:center;
+}
+
+.search-button {
+    background-color: rgb(250, 250, 250);
+    height: 35px;
+    border-color: rgb(250, 250, 250);
+    border-style: solid;
+    align-self:center;
+    
+    
 }
