--- a/styles/style.css
+++ b/styles/style.css
@@ -1,69 +1,150 @@
-html{
-    font-family: 'Open Sans', sans-serif;
-  height:100%;
+html, body{
+    font-family: 'Montserrat', sans-serif;
+  height:95vh;
+    font-weight: 100;
     width:100%;
-
-    
+    margin:auto;
+    background-color: white;
+    position: relative;
    
 }
 
-#box-container {
-   height: 100%;
-   width: 100%;
-    background-color: limegreen;
-    display: flex;
-    flex-direction: column;
-    
 
-    
-  
-
-}
 #header {
-
-    text-align: center;
-    background-color: lightskyblue;
+    margin: auto;
+    font-size:14px;
+    color: rgb(27, 27, 27);
+    padding: 10px;
+    background-color: white;
    
 }
-
-#footer {
-    
-   
-    text-align: center;
-    background-color: lightskyblue;
-    
-    
-}
-
 
 #search-container {
-    height: 100%;
-
-    background-color: pink;
-    justify-content: center;
-    display:flex;
-    flex-direction: column;
-
+    height: 33%;
+    width: 33%;
+    position: absolute; 
+    top: 33%;
+    left: 33%;
+    margin:auto;
+    text-align: center;
+    background-color: white;
+    
 }
 
 #logo {
-    align-self:center;
-}
+    /* display: block; */
+   
+    margin-left: auto;
+    margin-right: auto;
 
+}
+    
 #search-bar {
-    margin: 10px;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin: 10px; */
     border-radius: 30px;
+    height: 40px;
+    width: 550px;
     border: 1px solid rgb(225, 225, 225);
     
-    align-self:center;
 }
 
 .search-button {
+    display:inline-block;
+    white-space: nowrap;
+    font-size:14px;
     background-color: rgb(250, 250, 250);
     height: 35px;
     border-color: rgb(250, 250, 250);
     border-style: solid;
-    align-self:center;
+    color: rgb(27, 27, 27);
     
+}
+
+.footer {
+    position: absolute;
+    text-align: left;
+    font-size:14px;
+    height:50px;
+    width:100%;
+    background-color: rgb(240,240,240);
+    margin:0;
+    bottom:0;
+    color: rgb(87, 87, 87);
+ 
     
+}
+
+#subfooter {
+    text-align: left;
+    background-color: rgb(240,240,240);
+    height:60px;
+    font-size:14px;
+    margin:0;
+    top:0;
+    border-top: 1px solid rgb(214, 214, 214);
+}
+
+.right-links {
+    list-style-type: none;
+    float:right;
+    margin: 0;
+    padding:0;
+    text-align: right;
+    
+  }
+.left-links {
+    list-style-type: none;
+    float:left;
+    margin: 0;
+    padding:0;
+    text-align: left;
+  }
+
+
+li {
+    display: inline-block;
+    padding: 10px;
+}
+
+#sign-in {
+    background-color: #4285F4;
+    height: 35px;
+    width: 90px;
+    color: white;
+    font-size:15px;
+    border-color: #4285F4;
+    border-radius: 8px;
+    border-style: solid;
+    margin: 9px;
+
+}
+
+#menu {
+    height: 20px;
+    opacity:0.7;
+}
+
+li:hover {
+    text-decoration: underline;
+}
+
+#search-bar:hover {
+    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
+
+}
+
+.search-button:hover{
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.4);
+}
+
+
+#sign-in:hover{
+    background-color:  #5a94f1;
+    border-color: #5a94f1 ;
+}
+p{
+    margin-left: 10px;
 }
